k8s/k8s-manifests/helms/ingress-apple-banana/kustomize-fruits/fruits/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: orange
  replicas: 1
  template:
    metadata:
      labels:
        app: orange
    spec:
      containers:
      - name: orange
        image: hashicorp/http-echo
        args:
        - "-text=orange"
        ports:
        - containerPort: 5678
