k8s/k8s-manifests/helms/ingress-apple-banana/kustomize-fruits/fruits/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  selector:
    app: orange
  ports:
    - port: 5678
      targetPort: 5678
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /orange
          pathType: Prefix
          backend:
            service:
              name: orange-service
              port:
                number: 5678
